# scoop_bucket_cn

./: .editorconfig  .env  .gitattributes  .gitignore  CHANGELOG.BUILD.md  Dockerfile  Dockerfile-python  README.md  opv.md  pyproject.toml  requirements.txt  template.README.md
.github/workflows/: files-gh-proxy-update.yml
bucket/: aget-rs.json  blender.json  bun.json  clash.json  cmake.json  deno.json  dingtalk.json  envedit.json  fnm.json  git.json  hok.json  keyonscreen.json  ollama-full.json  ollama.json  overlayed.json  pico.json  pointless.json  powershell.json  rustdesk.json  vcpkg.json  vibe.json  wasmer.json  yarn.json
docs/: ask.for.ai.apk-virtual-clean.md  ask.for.ai.dup-env-path.md  ask.for.ai.file-not-found.md  ask.for.ai.pip.source.china.md  ask.for.ai.python-in-docker.md  ask.for.ai.use-env-file.md  not.use-alpine-to-build-python-image.md  opv.this.repo.01.md
scripts/: README.md  fresh-gh-proxy.py  put-apps-desc.py  setup-alpine-apk-repos.sh  setup-alpine-path.sh  setup-alpine.sh  setup-debian.sh  setup-pip-repos.sh  update.ts
