[project]
name = "scoop_bucket_cn"
description = "some comfyui custom nodes to set it as known type"
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = [
    "playwright[chromium]==1.52.0",
    "beautifulsoup4==4.13.4",
    "pytest==7.4.0"
]


[project.urls]
Repository = "https://github.com/ymc-github/scoop_bucket_cn"

#  Used by Comfy Registry https://comfyregistry.org
# [tool.comfy]
# PublisherId = "ymc-github"
# DisplayName = "ymc-node-as-x-type"
# Icon = ""
